--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Ng2Sos</title>
-  <base href="/">
+  <head>
+    <title>SOS</title>
+    <base href="/">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root>Loading...</app-root>
-</body>
+    <!-- Polyfill(s) for older browsers -->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+    <script src="systemjs.config.js"></script>
+    <script>
+      System.import('main.js').catch(function(err){ console.error(err); });
+    </script>
+    <script src="//vk.com/js/api/openapi.js?144" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+  </head>
+
+  <body>
+    <div class = "Is_posted">Posted</div>
+    <div id="map"></div>
+    <my-app>Loading AppComponent content here ...</my-app>
+    <input type="button" id="PostButton" value="Сделать пост вк" onClick="postOnTheWall()">
+    <script src="app.js"></script>
+  </body>
 </html>
