new gh-pages version

--- a/404.html
+++ b/404.html
@@ -14,6 +14,5 @@
     <div id="map"></div>
     <my-app>Loading AppComponent content here ...</my-app>
     <input type="button" id="PostButton" value="Сделать пост вк" onClick="postOnTheWall()">
-    <script src="app.js"></script>
-  <script type="text/javascript" src="inline.23f3c9a8e81e040a7ef4.bundle.js"></script><script type="text/javascript" src="polyfills.99279da224a13fd2270d.bundle.js"></script><script type="text/javascript" src="main.a97798d067d2cc3e3837.bundle.js"></script></body>
+  <script type="text/javascript" src="inline.e32136458d105edd0db5.bundle.js"></script><script type="text/javascript" src="polyfills.c423de867e5c0efd14a5.bundle.js"></script><script type="text/javascript" src="scripts.e136862485a7317b723e.bundle.js"></script><script type="text/javascript" src="main.619cedb9890fca0f8c26.bundle.js"></script></body>
 </html>
