--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class = "Is_posted">Posted</div>
     <my-app>Loading AppComponent content here ...</my-app>
-    <input type="button" id="PostButton" value="Сделать пост вк" onClick="postOnTheWall()">
+    <input type="button" id="PostButton" value="Post VK" onClick="postOnTheWall()">
     <div id="map"></div>
   </body>
 </html>
