--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SOS</title>
     <base href="/">
+    <title>SOS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="//vk.com/js/api/openapi.js?144" type="text/javascript"></script>
@@ -10,8 +10,9 @@
   </head>
 
   <body>
+    <!--<my-app>Loading AppComponent content here ...</my-app> -->
+    <app-root>Loading.</app-root>
     <div class = "Is_posted">Posted</div>
-    <my-app>Loading AppComponent content here ...</my-app>
     <input type="button" id="PostButton" value="Post VK" onClick="postOnTheWall()">
     <div id="map"></div>
   </body>
