--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SOS</title>
     <base href="/ng2-sos/">
+    <title>SOS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="//vk.com/js/api/openapi.js?144" type="text/javascript"></script>
@@ -10,9 +10,10 @@
   <link href="styles.1a3743c0b5fd2302f91a.bundle.css" rel="stylesheet"/></head>
 
   <body>
+    <!--<my-app>Loading AppComponent content here ...</my-app> -->
+    <app-root>Loading.</app-root>
     <div class = "Is_posted">Posted</div>
-    <my-app>Loading AppComponent content here ...</my-app>
     <input type="button" id="PostButton" value="Post VK" onClick="postOnTheWall()">
     <div id="map"></div>
-  <script type="text/javascript" src="inline.ca341006141287750c03.bundle.js"></script><script type="text/javascript" src="polyfills.c423de867e5c0efd14a5.bundle.js"></script><script type="text/javascript" src="scripts.e136862485a7317b723e.bundle.js"></script><script type="text/javascript" src="main.a3d8fe5be642ec8d6867.bundle.js"></script></body>
+  <script type="text/javascript" src="inline.91030542aab02221869f.bundle.js"></script><script type="text/javascript" src="polyfills.4b903eece46a2c7827df.bundle.js"></script><script type="text/javascript" src="scripts.4a8f0746d80c9b33185f.bundle.js"></script><script type="text/javascript" src="main.45251d6fd2a20e1b9604.bundle.js"></script></body>
 </html>
