--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
 
   <body>
     <!--<my-app>Loading AppComponent content here ...</my-app> -->
+    <h1 id="Greetings">
+
+    </h1>
     <app-root>Loading.</app-root>
     <div class = "Is_posted">Posted</div>
     <input type="button" id="PostButton" value="Post VK" onClick="postOnTheWall()">
