--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <body>
     <!--<my-app>Loading AppComponent content here ...</my-app> -->
     <h1 id="Greetings">
-
+      Hello
     </h1>
     <app-root>Loading.</app-root>
     <div class = "Is_posted">Posted</div>
