--- a/404.html
+++ b/404.html
@@ -11,9 +11,12 @@
 
   <body>
     <!--<my-app>Loading AppComponent content here ...</my-app> -->
+    <h1 id="Greetings">
+      Hello
+    </h1>
     <app-root>Loading.</app-root>
     <div class = "Is_posted">Posted</div>
     <input type="button" id="PostButton" value="Post VK" onClick="postOnTheWall()">
     <div id="map"></div>
-  <script type="text/javascript" src="inline.ebe11b8b9c1819680819.bundle.js"></script><script type="text/javascript" src="polyfills.4b903eece46a2c7827df.bundle.js"></script><script type="text/javascript" src="scripts.6b2874f43908b6ae59f8.bundle.js"></script><script type="text/javascript" src="main.d397f34b193d16b873ba.bundle.js"></script></body>
+  <script type="text/javascript" src="inline.f63b17bcd83bfc42cb60.bundle.js"></script><script type="text/javascript" src="polyfills.4b903eece46a2c7827df.bundle.js"></script><script type="text/javascript" src="scripts.d3dfc16c9c65a5156957.bundle.js"></script><script type="text/javascript" src="main.a156765a837d4c46cd24.bundle.js"></script></body>
 </html>
